# universal_manipulation_interface

./: .gitignore  CAMERA_INTEGRATION_GUIDE.md  CAMERA_REQUIREMENTS.md  CLEANUP_CHECKLIST.md  GOPRO_HERO13_CALIBRATION.md  HERO13_CALIBRATION_ISSUE.md  HERO13_README.md  HERO13_SETUP.md  HERO13_TECHNICAL_NOTES.md  MIGRATION.md  README.md  calibrate_hero13.py  check_tracking.py  create_720p_calibration.py  generate_charuco_board.py  generate_hero13_slam_settings_from_proper.sh  hero13_720p_intrinsics.json  hero13_720p_intrinsics_gopro9_tbc.json  pyproject.toml  recalibrate_hero13_proper.sh  run_slam_hero13_gopro9tbc.sh  run_slam_pipeline.py  test_hero13_compat.py  test_hero13_slam.py  visualize_dataset_episode.py  visualize_hero13_gopro9tbc.sh  visualize_slam_trajectory.py
docs/: HERO13_CALIBRATION_GUIDE.md  hero13_guide.md  mapping_video_analysis.md  robot_adaptation_architecture.md  tcp_coordinate_system.md
example/calibration/: hero13_720p_slam_settings_gopro9_tbc.yaml  hero13_proper_intrinsics_2.7k.json  hero13_proper_intrinsics_4k.json  hero13_proper_intrinsics_720p.json
scripts/: downsample_video_for_slam.py  generate_slam_settings.py
scripts_slam_pipeline/: 00_downscale_videos_hero13.py  02_create_map.py  02_create_map_hero13.py  03_batch_slam.py  03_batch_slam_hero13.py  06_generate_dataset_plan.py  07_generate_replay_buffer.py  test_slam_single_video.py
umi/common/: camera_config.py  cv_util.py
